tests/baselines/reference/parameterInitializersForwardReferencing1_es6(strict=true).errors.txt
parameterInitializersForwardReferencing1_es6.ts(13,20): error TS2373: Parameter 'bar' cannot reference identifier 'foo' declared after it.
parameterInitializersForwardReferencing1_es6.ts(17,14): error TS7006: Parameter 'foo' implicitly has an 'any' type.
parameterInitializersForwardReferencing1_es6.ts(21,14): error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
parameterInitializersForwardReferencing1_es6.ts(21,18): error TS2372: Parameter 'a' cannot reference itself.
parameterInitializersForwardReferencing1_es6.ts(25,14): error TS7022: 'async' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
parameterInitializersForwardReferencing1_es6.ts(25,22): error TS2372: Parameter 'async' cannot reference itself.
parameterInitializersForwardReferencing1_es6.ts(29,15): error TS2537: Type 'any[]' has no matching index signature for type 'string'.


==== parameterInitializersForwardReferencing1_es6.ts (7 errors) ====
    let foo: string = "";
    
    function f1 (bar = foo) { // unexpected compiler error; works at runtime
        var foo: number = 2;
        return bar; // returns 1
    }
    
    function f2 (bar = (baz = foo) => baz) { // unexpected compiler error; works at runtime
        var foo: number = 2;
        return bar(); // returns 1
    }
    
    function f3 (bar = foo, foo = 2) { // correct compiler error, error at runtime
                       ~~~
!!! error TS2373: Parameter 'bar' cannot reference identifier 'foo' declared after it.
        return bar;
    }
    
    function f4 (foo, bar = foo) {
                 ~~~
!!! error TS7006: Parameter 'foo' implicitly has an 'any' type.
        return bar
    }
    
    function f5 (a = a) {
                 ~~~~~
!!! error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                     ~
!!! error TS2372: Parameter 'a' cannot reference itself.
        return a
    }
    
    function f6 (async = async) {
                 ~~~~~~~~~~~~~
!!! error TS7022: 'async' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                         ~~~~~
!!! error TS2372: Parameter 'async' cannot reference itself.
        return async
    }
    
    function f7({[foo]: bar}: any[]) {
                  ~~~
!!! error TS2537: Type 'any[]' has no matching index signature for type 'string'.
        let foo: number = 2;
    }
    
    class Foo {
        constructor(public x = 12, public y = x) {}
    }
    
    function f8(foo1: string, bar = foo1) { }
    